--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pakjiddat/toc",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Standalone Node.js module for generating table of contents from HTML text",
   "main": "index.js",
   "scripts": {
@@ -8,16 +8,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nadirlc/toc.git"
+    "url": "git+https://github.com/pakjiddat/toc.git"
   },
   "keywords": [
     "table-of-contents-generator",
     "node-module"
   ],
-  "author": "Nadir Latif",
+  "author": "Pak Jiddat",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/nadirlc/toc/issues"
+    "url": "https://github.com/pakjiddat/toc/issues"
   },
-  "homepage": "https://github.com/nadirlc/toc#readme"
+  "homepage": "https://pakjiddat.netlify.app/posts/nodejs-table-of-contents-generator"
 }
